2004-04-23 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b51

	* Fix: changed \" to &quot; in a translateable text.
	       This confuses the substitute function for gettext.

	* Change: HTML fixes.
		-  <img> should not be closed in HTML 4.01
		-  changed all <br /> to <br>

	* Fix: Removed warning in devmode when no watermark dir is set.

        * Fix: Removed empty lines between ?> and <?php in applet.inc.   .
               This caused warnings when Gallery is embedded and the Applet is installled.

2004-04-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b50

	* Change: Make 'high' the default slideshow mode intead of 'applet'

2004-04-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b49

	* Bugfix: Commented code - This code is not functioning the
	  way it's intended. $gallery->album is referring to the album
	  being moved, not the parent album.  getNestedAlbum returns
	  the number of photos inside the album being moved - 
	  if the index of the album being moved (inside its parent)
	  is larger than the number of photos inside the album being
	  moved, then getAlbumName will return an out of bounds error

2004-04-21  Chris Kelly <ckdake@users.sf.net> 1.4.4-cvs-b48

	* Bugfix: #938293 - Config wizard now says "All tested files up-to-date."
	  when the number of tested files is 0. 

2004-04-21  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b47

	* Fix: If an album's highlight flag is mistakenly set, but there is no
	  highlight, the album upgrade process fails with PHP errors about deref'ing a
	  non-object. This validates that getHighlightedItem returns with valid
	  data.

2004-04-21  Chris Kelly <ckdake@users.sf.net> 1.4.4-cvs-b46

	* Bugfix: #938387 - Added missing class attributes

2004-04-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b45

	* Fix: Moving to ROOT was broken in -b34 - added fix.
	  Unrelated to 
	  http://gallery.menalto.com/index.php?name=PNphpBB2&file=viewtopic&p=71387
