@@ -99,8 +99,8 @@ function appendNestedAlbums($level, $albumName, $albumString) {
     $numPhotos = $myAlbum->numPhotos(1);
 
     for ($i=1; $i <= $numPhotos; $i++) {
-        $myName = $myAlbum->getAlbumName($i);
-        if ($myName) {
+        if ($myAlbum->isAlbum($i)) {
+            $myName = $myAlbum->getAlbumName($i);
             $nestedAlbum = new Album();
             $nestedAlbum->load($myName);
             if ($gallery->user->canWriteToAlbum($nestedAlbum)) {
