@@ -732,8 +732,8 @@ function appendNestedAlbums( &$myAlbum, &$album_index, &$response ) {
 	$numPhotos = $myAlbum->numPhotos(1);
     
     for ($i=1; $i <= $numPhotos; $i++) {
-        $myName = $myAlbum->getAlbumName($i);
-        if ($myName) {
+        if ($myAlbum->isAlbum($i)) {
+            $myName = $myAlbum->getAlbumName($i);
             $nestedAlbum = new Album();
             $nestedAlbum->load($myName);
             if ($gallery->user->canReadAlbum($nestedAlbum)) {
