@@ -1,3 +1,9 @@
+2004-04-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b52
+
+	* Change: Correct if(getAlbumName) checks to if(isAlbum)
+
+	* Change: Remove accidental debug code from b49
+
 2004-04-23 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b51
 
 	* Fix: changed \" to &quot; in a translateable text.
